<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:text="@string/what_is_your_number"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="#56BF5A"
        android:textSize="24sp"
        android:visibility="invisible"
        tools:text="@string/checked_number"

        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_reset"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:onClick="clickDownwardArrow"
            app:srcCompat="@drawable/ic_baseline_arrow_downward_24"
            android:background="@drawable/background_circle_blue"
            android:contentDescription="@string/str_arrow_down"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:onClick="clickSuccess"
            android:background="@drawable/background_circle_green"
            android:contentDescription="@string/app_guess_success"
            app:srcCompat="@drawable/ic_baseline_check_24"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:onClick="clickUpwardArrow"
            app:srcCompat="@drawable/ic_baseline_arrow_upward_24"
            android:background="@drawable/background_circle_blue"
            android:contentDescription="@string/str_arrow_up"
            />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:onClick="clickReset"
        android:text="@string/btn_reset"
        android:textColor="#00FF0A"
        android:textSize="24sp"
        tools:ignore="TextContrastCheck" />


</RelativeLayout>